--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.14.4",
-    "parcel": "^2.14.4"
+    "parcel": "^2.14.4",
+    "svgo": "^3.3.2"
   },
   "dependencies": {
     "core-js": "^3.41.0",
